examples/good/adt/maybe.gr
data Bool where
  False : Bool;
  True : Bool

data Maybe a where
  None : Maybe a;
  Some : a -> Maybe a

maybe : forall a : Type . a |1| -> Maybe a -> a
maybe |default| m =
    case m of {
      None -> default;
      (Some x) -> x
    }
