examples/illtyped/poly.gr
idBad : forall (a : Type) . a -> a
idBad = \(x : Int) -> x
